--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+
 .top-header {
 	background-color: white;
 	position: sticky;
@@ -61,6 +62,10 @@ body {
 	z-index: -1;
 }
 
+.carousel-item .size {
+	width: 100%;
+}
+
 .picture {
 	flex: 1;
 	margin: 0 20px;
@@ -90,9 +95,10 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
+/* #gallery {
+	min-height: 100vh;
+}*/
+
 .title{
 	text-align: center;
 	padding-block: 2em;
