--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,10 @@ body {
 	width: 100%;
 
 }
+h2 {
+	font-size: 28px;
+}
+
 #about-me {
 	flex: 2
 }
@@ -85,6 +89,7 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 16px;
 }
 #about-me p {
 	width: 80%;
@@ -152,7 +157,8 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 40px;
+	line-height: 1.2;
 }
 .quote__author {
 	font-family: Spectral;
